--- a/ios/MyNewApp/Base.lproj/Main.storyboard
+++ b/ios/MyNewApp/Base.lproj/Main.storyboard
@@ -26,6 +26,14 @@
                                     <action selector="OnNavigateToReact:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fYc-cr-TX1"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zwY-gG-MaJ">
+                                <rect key="frame" x="97" y="152" width="202" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Navigate to new react screen"/>
+                                <connections>
+                                    <action selector="OnNavigateToNewReact:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rcm-6U-dwR"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
